--- a/paimon-web-ui/package.json
+++ b/paimon-web-ui/package.json
@@ -19,6 +19,8 @@
     "@antv/x6-plugin-dnd": "^2.1.1",
     "@antv/x6-vue-shape": "^2.1.1",
     "@stomp/stompjs": "^7.0.0",
+    "ant-design-vue": "^4.0.0-rc.6",
+    "antd": "^5.22.4",
     "dart-sass": "^1.25.0",
     "dayjs": "^1.11.11",
     "highlight.js": "^11.9.0",
